--- a/3.html
+++ b/3.html
@@ -13,17 +13,15 @@
   </ol>
   <h2>달달</h2>
   <p><a href=""</p>
-<img src="두손꼬옥1.webp"width="100%"><li>
-<img src="두손 꼬옥2.webp"width="100%"><l1>
-<img src="두손 꼬옥3.webp"width="100%"><l1>
-<img src="두손 꼬옥4.webp"width="100%"><l1>
-<img src="두손 꼬옥5.webp"width="100%"><l1>
+<img src="두손꼬옥1.jpg"width="100%"><li>
+<img src="두손꼬옥2.jpg"width="100%"><l1>
+<img src="두손꼬옥3.jpg"width="100%"><l1>
+<img src="두손꼬옥4.jpg"width="100%"><l1>
+<img src="두손꼬옥5.jpg"width="100%"><l1>
 여기부터 신혼생활 시작(ㅎㅎㅎㅎ)
-<img src="결혼1.webp"width="100%"><l1>
-<img src="결혼2.webp"width="100%"><l1>
-<img src="결혼3.webp"width="100%"><l1>
-<img src="결혼5.webp"width="100%"><l1>
-<img src="결혼4.webp"width="100%"><l1>
+<img src="결혼2.jpg"width="100%"><l1>
+<img src="결혼3.jpg"width="100%"><l1>
+<img src="결혼5.jpg"width="100%"><l1>
   </p>
 </html>
 '미운우리새끼'에 출연한 양세찬이 전소민의 발언에 서운함을 내비쳤다.<a>지난 9일 방송된 SBS '미운 우리 새끼'에서는 전소민과 양세찬이 서로에 대한 속마음을 밝히는 모습이 그려졌다.<br><br>
