--- a/3.html
+++ b/3.html
@@ -1,9 +1,9 @@
 <!doctype html>
   <html>
-  <head>
-  <title>둘다 사랑해요!!! - html</title>
-  <meta charset="utf-8">
-  </head>
+    <head>
+      <title>둘다 사랑해요!!! - html</title>
+      <meta charset="utf-8">
+    </head>
   <body>
   <h1><a href="">WEB</H1>
   <ol>
@@ -12,18 +12,17 @@
   <li><a href="3.html">둘다아</a></li>
   </ol>
   <h2>달달</h2>
-  <p><a href=""</p>
-<img src="두손꼬옥1.jpg"width="100%"><li>
-<img src="두손꼬옥2.jpg"width="100%"><l1>
-<img src="두손꼬옥3.jpg"width="100%"><l1>
-<img src="두손꼬옥4.jpg"width="100%"><l1>
-<img src="두손꼬옥5.jpg"width="100%"><l1>
+  <p><a href=""></p>
+<img src="1.jpg"width="100%">
+<img src="2.jpg" width="100%">
+<img src="두손꼬옥3.jpg"width="100%">
+<img src="두손꼬옥4.jpg"width="100%">
+<img src="두손꼬옥5.jpg"width="100%">
 여기부터 신혼생활 시작(ㅎㅎㅎㅎ)
-<img src="결혼2.jpg"width="100%"><l1>
-<img src="결혼3.jpg"width="100%"><l1>
-<img src="결혼5.jpg"width="100%"><l1>
+<img src="결혼2.jpg"width="100%">
+<img src="결혼3.jpg"width="100%">
+<img src="결혼5.jpg"width="100%">
   </p>
-</html>
 '미운우리새끼'에 출연한 양세찬이 전소민의 발언에 서운함을 내비쳤다.<a>지난 9일 방송된 SBS '미운 우리 새끼'에서는 전소민과 양세찬이 서로에 대한 속마음을 밝히는 모습이 그려졌다.<br><br>
 
 이날 김종국의 집에 놀러 온 양세찬과 하하는 함께 연애 이야기를 나눴다. 그러던 중 김종국은 '런닝맨'에서 전소민과 썸(?)을 타는 양세찬에게 "소민이랑 러브라인할 때 진지하게 선을 긋더라"라고 말을 꺼냈다. 이어 김종국과 하하는 <u>"너 소민이 좋아하냐"</u>며 몰아가기 시작했다.<br><br>
@@ -38,3 +37,5 @@
 
 <u>이를 듣고 있던 양세찬은 어쩔 줄 몰라 하며 얼굴을 붉혔고</u>, 하하는 <u>"세찬이가 너 사랑한다"</u>며 밑도 끝도 없이 부추겨 폭소케 했다.<br><br>
 <p><a href="https://www.youtube.com/watch?v=HYr03LFzfbE&list=PLXl7JSCuPGoBlkl3ITHDTvsjtbROXmyfI"/>런닝맨 전소민 양세찬kevin모음</p>
+</body>
+</html>
