--- a/3.html
+++ b/3.html
@@ -7,17 +7,17 @@
   <body>
   <h1><a href="">WEB</H1>
   <ol>
-  <li><a href="1.html">전소민</a></li
+  <li><a href="1.html">전소민</a></li>
   <li><a href="2.html">양세찬</a></li>
   <li><a href="3.html">둘다아</a></li>
   </ol>
   <h2>달달</h2>
   <p><a href=""></p>
-<img src="1.jpg"width="100%">
+<img src="1.jpg" width="100%">
 <img src="2.jpg" width="100%">
-<img src="두손꼬옥3.jpg"width="100%">
-<img src="두손꼬옥4.jpg"width="100%">
-<img src="두손꼬옥5.jpg"width="100%">
+<img src="two3.jpg"width="100%">
+<img src="two4.jpg"width="100%">
+<img src="two5.jpg"width="100%">
 여기부터 신혼생활 시작(ㅎㅎㅎㅎ)
 <img src="결혼2.jpg"width="100%">
 <img src="결혼3.jpg"width="100%">
