--- a/3.html
+++ b/3.html
@@ -19,9 +19,9 @@
 <img src="two4.jpg"width="100%">
 <img src="two5.jpg"width="100%">
 여기부터 신혼생활 시작(ㅎㅎㅎㅎ)
-<img src="결혼2.jpg"width="100%">
-<img src="결혼3.jpg"width="100%">
-<img src="결혼5.jpg"width="100%">
+<img src="k1.jpg"width="100%">
+<img src="k2.jpg"width="100%">
+<img src="k3.jpg"width="100%">
   </p>
 '미운우리새끼'에 출연한 양세찬이 전소민의 발언에 서운함을 내비쳤다.<a>지난 9일 방송된 SBS '미운 우리 새끼'에서는 전소민과 양세찬이 서로에 대한 속마음을 밝히는 모습이 그려졌다.<br><br>
 
