--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   </head>
   <body>
-  <h1><a href="">WEB</H1>
+  <h1><a href="index.html">WEB</H1>
   <ol>
   <li><a href="1.html">전소민</a></li>
   <li><a href="2.html">양세찬</a></li>
